--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,19 @@ install:
 - pip install -r requirements.txt
 - pip install codeclimate-test-reporter
 - pip install -q Django==$DJANGO
+- pip install flake8 coverage coveralls $DJANGO freezegun
+- pip install -e .
 
 script:
 - coverage run --source=habitica_slack manage.py test
+- flake8 --max-line-length=100 --max-complexity=10 --statistics --benchmark django_slowtests
+- coverage run setup.py test
+- coverage report
 
 after_script:
 - codeclimate-test-reporter --file .coverage # send test coverage report to code climate
 
 after_success: 
 - coverage report
+
+after_success: coveralls
