--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - pip install -r requirements.txt
 - pip install codeclimate-test-reporter
 - pip install -q Django==$DJANGO
-- pip install flake8 coverage coveralls $DJANGO freezegun
+- pip install flake8 coverage coveralls
 - pip install -e .
 
 script:
