--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 script:
 - coverage run --source=habitica_slack manage.py test
 - flake8 --max-line-length=100 --max-complexity=10 --statistics --benchmark django_slowtests
-- coverage run setup.py test
+- coverage run manage.py test
 - coverage report
 
 after_script:
