--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 - coverage run --source=habitica_slack manage.py test
 - flake8 --max-line-length=100 --max-complexity=10 --statistics --benchmark django_slowtests
 - coverage report
-- python manage.py test
+- coverage run manage.py test
 
 after_script:
 - codeclimate-test-reporter --file .coverage # send test coverage report to code climate
